fix: center align snoflake combobox's helptext #957

--- a/components/combobox/src/styles/snowflake/style.scss
+++ b/components/combobox/src/styles/snowflake/style.scss
@@ -6,4 +6,8 @@
       display: none;
     }
   }
+
+  &::part(helpText) {
+    text-align: center;
+  }
 }
